--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <body>
     <div class="container">
         <h1>Abhijith P K</h1>
-        <p>Accountant | Business Enthusiast | Construction Industry</p>
+        <p>Accountant | Business Enthusiast | data Engineer</p>
         
         <h2>Work Experience</h2>
         <div class="work-experience">
