--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
 <body>
     <div class="container">
         <h1>Abhijith P K</h1>
-        <p>Accountant | Business Enthusiast | data Engineer</p>
+        <p>Designer | Business Enthusiast | data Engineer</p>
         
         <h2>Work Experience</h2>
         <div class="work-experience">
             <div class="job">
-                <h3>Software Consultant (Data Engineer) - Smartgig Technologies, Hyderabad</h3>
+                <h3>Data Engineer - Smartgig Technologies, Hyderabad</h3>
                 <p><strong>May 2023 – October 2023</strong></p>
                 <ul>
                     <li>Executed seamless data migration from Azure to AWS, ensuring data integrity and minimal downtime.</li>
